objects/LoginWithUsers__c.object
<CustomObject>
    <fields>
        <fullName>API_TYPE__c</fullName>
        <label>API_TYPE</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>API_VERSION__c</fullName>
        <label>API_VERSION</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BROWSER_TYPE__c</fullName>
        <label>BROWSER_TYPE</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CLIENT_IP__c</fullName>
        <label>CLIENT_IP</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CPU_TIME__c</fullName>
        <label>CPU_TIME</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DB_TOTAL_TIME__c</fullName>
        <label>DB_TOTAL_TIME</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EVENT_TYPE__c</fullName>
        <label>EVENT_TYPE</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ORGANIZATION_ID__c</fullName>
        <label>ORGANIZATION_ID</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>REQUEST_ID__c</fullName>
        <label>REQUEST_ID</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>REQUEST_STATUS__c</fullName>
        <label>REQUEST_STATUS</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RUN_TIME__c</fullName>
        <label>RUN_TIME</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SOURCE_IP__c</fullName>
        <label>SOURCE_IP</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TIMESTAMP_DERIVED__c</fullName>
        <label>TIMESTAMP_DERIVED</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TIMESTAMP__c</fullName>
        <label>TIMESTAMP</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>URI__c</fullName>
        <label>URI</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>USER_ID_DERIVED__c</fullName>
        <label>USER_ID_DERIVED</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>USER_ID__c</fullName>
        <label>USER_ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>USER_NAME__c</fullName>
        <label>USER_NAME</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_IsActive__c</fullName>
        <label>User_IsActive</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Name1__c</fullName>
        <label>User_Name1</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Profile_Name__c</fullName>
        <label>User_Profile_Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_User_Role_Name__c</fullName>
        <label>User_User_Role_Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Username__c</fullName>
        <label>User_Username</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <label>Login With Users</label>
    <nameField>
        <displayFormat>LWU-{0000}</displayFormat>
        <label>Login With Users Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Login With Users</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>